# Irodori-TTS

./: .gitignore  compose.yaml  pyproject.toml  server.py  train.py  tts_server.py
.claude/skills/tts-clean/: SKILL.md
.claude/skills/tts-preprocess/: SKILL.md  voice_cleaning_prompt.md
.claude/skills/tts-train/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  postAttachCommand.sh  postCreateCommand.sh
configs/: runtime.yaml  train_500m_v2_hifumi_lora.yaml  train_500m_v2_speaker_lora.yaml
docker/runtime/: Dockerfile  Dockerfile.dockerignore  compose.yaml  entrypoint.sh
docker/train/: Dockerfile  compose.yaml  entrypoint.sh
docs/: LLM_API_REFERENCE.md  SERVER.md  TRAINING.md  VDS.md  VDS_SPEC_V1.md
irodori_tts/: config.py  inference_runtime.py  lora.py  training_samples.py
irodori_tts/vds/: __init__.py  parser.py  shortcodes.py  types.py
scripts/: entrypoint.sh  hf_download_dataset.py  hf_upload_archives.py  make_speaker_archives.py
scripts/clean/: apply_llm_diff.py  clean_metadata_auto.py  split_for_llm.py
scripts/dataset/: hf_download_dataset.py  hf_download_speaker.py  hf_upload_archives.py  hf_upload_dataset.py  hf_upload_speaker.py  make_speaker_archives.py
scripts/lora/: export_lora_to_safetensors.py
scripts/preprocess/: batch_preprocess_voice.sh  filter_metadata_voice.py  preprocess_audio.py  preprocess_hifumi.py  transcribe_dir.py
scripts/samples/: 01.vds.json  01_code.vds.json  build_sample_browser.py  death_game_ch1.json  death_game_ch1.vds  reupload_samples_to_new_run.py  synth_hifumi_article.py  upload_post_samples.py
scripts/train/: make_speaker_config.py  train_multi_speaker.sh
tests/: test_vds_parser.py
