[project]
name = "irodori-tts"
version = "0.1.0"
description = "Irodori-TTS training and inference codebase"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "dacvae",
    "datasets>=3.0.0",
    "gradio>=5.0.0",
    "huggingface-hub>=0.34.0,<1.0",
    "llvmlite>=0.40.0",
    "numba>=0.57.0",
    "peft>=0.18.0",
    "pyaml-env>=1.2.1",
    "pyyaml>=6.0",
    "safetensors>=0.7.0",
    "soundfile>=0.12.0",
    "sentencepiece>=0.1.99,<0.2",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "transformers<5",
    "tqdm>=4.67.3",
    "wandb>=0.17.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchaudio = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
dacvae = { git = "https://github.com/facebookresearch/dacvae" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["irodori_tts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"

[dependency-groups]
dev = [
    "faster-whisper>=1.2.1",
    "onnxruntime<1.23",
]
